tests/ui/issues/issue-17904-2.stderr
error[E0392]: type parameter `T` is never used
  --> $DIR/issue-17904-2.rs:4:12
   |
LL | struct Foo<T> where T: Copy;
   |            ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0392`.
